--- a/force-app/Exercises/main/default/lwc/studentDetail/studentDetail.html
+++ b/force-app/Exercises/main/default/lwc/studentDetail/studentDetail.html
@@ -20,18 +20,15 @@
 			</template>
 			
 		</lightning-card>
-		
-		<div if:true={wiredStudent.data} class="slds-var-m-vertical_small  history">
+
+		<div if:true={wiredStudent.data} class="slds-var-m-vertical_small history">
 			<lightning-tabset>
 				<lightning-tab label="History">
-					<template if:false={hasHistory}>
-						The student has not registered for any courses.
-					</template>
+					<c-student-history history={history}></c-student-history>
 				</lightning-tab>
 				<lightning-tab if:true={hasHistory} label="Edit Notes">
-					<c-student-note-editor history={history}></c-student-note-editor>
+					<c-student-note-editor history={history} onnotesupdated={onNotesUpdated}></c-student-note-editor>
 				</lightning-tab>
 			</lightning-tabset>
 		</div>
-
 </template>
